// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CancelIcon matches snapshot 1`] = `
<span
  aria-label="Cancel"
  charSet="utf-8"
  className="hover-pointer"
  dangerouslySetInnerHTML={
    Object {
      "__html": "⨉",
    }
  }
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  style={
    Object {
      "bottom": 4,
      "color": "#888",
      "fontSize": 16,
      "position": "absolute",
      "right": 8,
    }
  }
  tabIndex={0}
/>
`;

exports[`SearchIcon matches snapshot 1`] = `
<span
  charSet="utf-8"
  dangerouslySetInnerHTML={
    Object {
      "__html": "⚲",
    }
  }
  style={
    Object {
      "color": "#888",
      "fontSize": "20pt",
      "left": "6pt",
      "position": "absolute",
      "top": "-4pt",
      "transform": "rotate(-45deg)",
    }
  }
/>
`;
